@@ -345,7 +345,8 @@ Version 7.4  [ (to be announced) ]
         Class ModelLinkGraph:
             - Now supports non-planar graphs (as used with virtual links), as
               well as disconnected and/or empty graphs.
-            - New routines countComponents(), isSimple() and isConnected().
+            - New routines countComponents(), isSimple(), isConnected(), and
+              genus().
             - Routine generateMinimalLinks() now supports multiple-component
               links.  Moreover, it has a new precondition requiring no 1-gons
               in the induced cell decomposition, and throws an exception if
